<resources>
    <string name="facebook_app_id">614101389041707</string>
    <string name="facebook_application_id">614101389041707</string>
    <string name="fb_login_protocol_scheme">fb614101389041707</string>
    <!--<string name="default_web_client_id">54295220565-ae26dcg3sqklujivmg68a3dm4cql2i8p.apps.googleusercontent.com</string>-->
    <string name="app_name">Observatorio Móvil</string>
    <string name="main.hint.userName">Nombre</string>
    <string name="main.hint.email">Correo</string>
    <string name="main.hint.provider">Proveedor</string>
    <string name="main.menu.signOut">Cerrar Sesión</string>
    <string name="normal.channel.id">channel.id.notification.normal</string>
    <string name="normal.channel.name">Registro sin completar</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="especies">Especies</string>
    <string name="registro">Completar Registro</string>
    <string name="title_activity_mapa">Map</string>
    <string name="seleccionespecie">Seleccione la especie vista</string>
    <string name="especieregistrada">Gracias por tu registro</string>
    <string name="registrocompleto">Hemos registrado los siguientes datos de tu avistamiento:</string>
    <string name="regresarregistros">Regresar a tus registros</string>
    <string name="completarregistrostring">Completar Registro</string>
    <string name="regresarmenu_1">Regresar al Menú</string>
    <string name="preference_file_key">fichero01</string>
    <string name="direccion_key">direccion_01</string>
    <string name="title_activity_maps">Map</string>
    <string name="direcci_n">Dirección:</string>
    <string name="reportar_especies">Reportar Especies</string>
    <string name="regresar_al_inicio">Regresar al Inicio</string>
    <string name="lista_de_reportes">Lista de Reportes</string>
    <string name="reportar">Reportar</string>
    <string name="title_activity_main_01">MainActivity_01</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_singing_out">CerrarSesion</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="obteniendo">Obteniendo dirección...</string>
    <string name="indicar">Indícanos la especie vista?</string>
    <string name="vacia">vacioTemporalmente</string>
    <string name="hora">Hora:</string>
    <string name="completar">Completar Registros</string>
    <string name="completa_tus_reportes">Completa tus Reportes</string>
    <string name="especie_title">Especie:</string>
</resources>
